# jarvis

./: .env  .env.dist  .gitignore  Dockerfile  LICENSE  Procfile  README.md  chatgpt_service.py  create_superuser.py  docker-compose.yml  pyproject.toml  requirements.txt  scripts.txt  setup.ps1  setup.sh
jarvis/: Procfile  requirements.txt
jarvis/config/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
jarvis/contacts/: admin.py  forms.py  models.py  urls.py  views.py
jarvis/contacts/migrations/: 0001_initial.py  0002_alter_contact_user.py  0003_alter_contact_user.py  0004_alter_contact_birthday.py
jarvis/contacts/templates/: add_contact.html  contact_list.html  delete_contact.html  fulldata_contact.html  update_contact.html
jarvis/core/: admin.py  apps.py  battery_utils.py  chatgpt_service.py  context_processors.py  forms.py  models.py  rss_feed.py.dist  urls.py  views.py
jarvis/core/migrations/: 0001_initial.py  0002_activationtoken.py  0002_file_name_file_uploaded_at_alter_file_category_and_more.py  0002_tag_note_created_at_note_title_note_updated_at_and_more.py  0003_alter_file_category.py  0003_delete_activationtoken.py  0004_customuser_email_confirmed_activationtoken.py  0004_customuser_storage_limit.py  0005_customuser_avatar.py  0005_remove_customuser_email_confirmed_and_more.py  0006_delete_contact.py  0007_profile.py  (+9 more)
jarvis/myenv/: pyvenv.cfg
jarvis/news/: models.py  tasks.py  urls.py  views.py
jarvis/notes/: admin.py  forms.py  models.py  urls.py  views.py
jarvis/task_manager/: admin.py  forms.py  models.py  urls.py  views.py
(+73 files in other folders)
