[tool.poetry]
name = "jarvis"
version = "0.1.0"
description = ""
authors = ["Stark Industries"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
django-allauth = "^0.63.6"
django-sslserver = "^0.22"
django-phonenumber-field = "^8.0.0"
phonenumbers = "^8.13.40"
openai = "^1.37.0"
aiohttp = "^3.9.5"
bs4 = "^0.0.2"
psutil = "^6.0.0"
environs = "^11.0.0"
requests = "^2.32.3"
jwt = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
